2004/08/01 21:10 (-0400) muppetman

	* README, NEWS, Gtk2.pm: unstable development release 1.053

	* Makefile.PL, README: require Glib 1.053

2004/08/01 18:12 (+0200) kaffeetisch

	* Makefile.PL: select_files_by_version and read_source_list_file
	were moved to Glib::MakeHelper -- adjust the function calls
	accordingly.

	* t/00.Gtk2.t, xs/Gtk2.xs: Bind and test gtk_parse_args.

	* maps_pango-1.5, t/PangoLayout.t, xs/PangoLayout.xs: Bind and
	test pango_layout_[sg]et_ellipsize.

2004/07/31 22:43 (-0400) muppetman

	* xs/GtkTreeModel.xs, t/GtkTreeModelIface.t: add
	Gtk2::TreeIter::to_arrayref() and Gtk2::TreeIter::new_from_arrayref(),
	which allow custom model implementations to manipulate iters outside
	of the vfuncs.  documentation included.  thanks to Zach Bean for
	real-world testing of the new methods, and for nearly rewriting the
	testcase to support and verify them.

	* examples/customlist.pl: patch from Zach (slightly modified by
	muppet) adds set() and get_iter_from_name() methods to the custom
	list implementation, showing off the use of
	Gtk2::TreeIter::new_from_arrayref() and to_arrayref().

	* AUTHORS: add Zach

2004/07/18 23:45 (-0400) muppetman

	* README, NEWS, Gtk2.pm: unstable development release 1.052

	* Makefile.PL, README: require Glib 1.052

2004/07/17 18:19 (+0200) kaffeetisch

	* xs/GtkTreeView.xs: In the POD for get_path_at_pos, escape all <
	and >'s that should actually show up.

2004/07/17 08:24 (-0400) muppetman (i really wish i was still asleep)

	* xs/GdkProperty.xs: use STRLEN instead of int for the values that
	will be passed to SvPV().  remove unnecessary calls to sv_len().

	* xs/GtkContainer.xs: hush compiler warning that RETVAL could be
	used uninitialized.  indeed it's possible, but not at all likely.

2004/07/12 20:46 (+0200) kaffeetisch

	* CodeGen.pm: Use explicit casts to gpointer in newSV$classname,
	newSV$classname\_own, and newSV$classname\_copy, in order to allow
	the const modifier on boxed types.  Also add