@@ -1,0 +1,3 @@
+xs/GtkAboutDialog.xs
+xs/GtkIconView.xs
+xs/GtkCellView.xs
