@@ -1,3 +1,11 @@
+2004/08/07 16:14 (-0400) rwmcfa1
+
+	* maps-2.6, xs_files-2.6, t/GtkAboutDialog.t, t/GtkCellView.t,
+	t/GtkIconView.t, xs/GtkAboutDialog.xs, xs/GtkCellView.xs,
+	xs/GtkIconView.xs: initial import new stuff in 2.5.x
+
+	* TODO: added a todo
+
 2004/08/01 21:10 (-0400) muppetman
 
 	* README, NEWS, Gtk2.pm: unstable development release 1.053
